--- a/README
+++ b/README
@@ -1,7 +1,5 @@
 sudo systemctl enable sshd
-sudo systemctl start sshd
-
-
+sudo systemctl start sshd 
 
 sudo adduser admin
 sudo usermod -aG wheel admin
@@ -14,8 +12,6 @@ sudo ls
 # удаляем пользователя st1 из группы wheel
 sudo gpasswd -d st1 wheel
 # ======
-sudo adduser st1
-sudo passwd st1
 
 # по загрузке смотрим какой по порядку стоит windows
 sudo vi /etc/default/grub
@@ -27,21 +23,17 @@ sudo dnf -y remove gnome-initial-setup
 
 # все вместе
 sudo dnf -y install mc gcc-c++ arm-none-eabi-gcc-cs-c++ arm-none-eabi-gdb  texlive-collection-langcyrillic texlive-cm-super texlive-circuitikz texlive-cite texlive-cancel texstudio ngspice geda-gschem geda-gnetlist pcb geda-utils geda-gattrib eclipse eclipse-cdt
+sudo dnf -y install wxMaxima scilab octave ncurses-compat-libs
 
+/usr/local/MATLAB/R2018b
 
-sudo dnf install mc
-sudo dnf install gcc-c++ 
-sudo dnf install arm-none-eabi-gcc-cs-c++ arm-none-eabi-gdb 
-sudo dnf install eclipse eclipse-cdt
+mkdir matlab_R2018b_glnxa64
+%cp ~/Загрузки/matlab_R2018b_glnxa64.zip matlab_R2018b_glnxa64
+scp admin@10.131.0.69:/home/admin/matlab_R2018b_glnxa64.zip ~/matlab_R2018b_glnxa64
+cd matlab_R2018b_glnxa64
+unzip matlab_R2018b_glnxa64.zip
+sudo mkdir -p /usr/local/MATLAB/R2018b
+sudo chown admin:admin /usr/local/MATLAB/R2018b
 
-sudo dnf install texlive-collection-langcyrillic
-sudo dnf install texlive-cm-super texlive-circuitikz texlive-cite texlive-cancel
-
-sudo dnf install texstudio
-
-sudo dnf install ngspice geda-gschem geda-gnetlist geda-gsch2pcb pcb geda-utils geda-gattrib
-
-
-
-
-
+scp admin@10.131.0.69:/home/admin/reduce-complete-4865-1.x86_64.rpm .
+sudo rpm -i reduce-complete-4865-1.x86_64.rpm
